Add coverage report testenvs to tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -3,3 +3,33 @@ envlist=py26,py27,py32,py33,py34
 
 [testenv]
 commands=python -m setup test
+
+[testenv:cover]
+basepython=python3.4
+deps=
+    coverage
+commands=
+    coverage erase
+    coverage run -m setup test
+    coverage html
+    coverage report
+
+[testenv:cover-tester]
+basepython=python3.4
+deps=
+    coverage
+commands=
+    coverage erase
+    coverage run -m setup test -s clize.tests.test_testutil
+    coverage html
+    coverage report --include 'clize/tests/util.py'
+
+[testenv:cover-help]
+basepython=python3.4
+deps=
+    coverage
+commands=
+    coverage erase
+    coverage run -m setup test -s clize.tests.test_help
+    coverage html
+    coverage report --include 'clize/help.py'
