Added line wrapping to util.Formatter

--- a/tox.ini
+++ b/tox.ini
@@ -14,6 +14,17 @@ commands=
     coverage html
     coverage report
 
+[testenv:cover-util]
+basepython=python3.4
+deps=
+    coverage
+commands=
+    coverage erase
+    coverage run -m setup test -s clize.tests.test_util
+    coverage html
+    coverage report --include 'clize/util.py'
+
+
 [testenv:cover-tester]
 basepython=python3.4
 deps=
