add explicit dependency on ordereddict in tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,9 @@ envlist=py26,py27,py32,py33,py34
 [testenv]
 commands=python -m setup test
 
+[testenv:py26]
+deps=ordereddict
+
 [testenv:cover]
 basepython=python3.4
 deps=
