--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,12 @@ commands=python -m setup test
 [testenv:py26]
 deps=ordereddict
 
+
+[testenv:docs]
+deps=sphinx
+commands=
+    python -m setup build_sphinx
+
 [testenv:cover]
 basepython=python3.4
 deps=
