Added datetime and file as included converters.

--- a/tox.ini
+++ b/tox.ini
@@ -2,10 +2,14 @@
 envlist=py26,py27,py32,py33,py34
 
 [testenv]
+deps=
+    python-dateutil
 commands=python -m setup test
 
 [testenv:py26]
-deps=ordereddict
+deps=
+    ordereddict
+    python-dateutil
 
 
 [testenv:docs]
@@ -16,6 +20,7 @@ commands=
 [testenv:cover]
 basepython=python3.4
 deps=
+    python-dateutil
     coverage
 commands=
     coverage erase
