Use unittest as test runner except on python 2.6.

--- a/tox.ini
+++ b/tox.ini
@@ -4,12 +4,13 @@ envlist=py26,py27,py32,py33,py34
 [testenv]
 deps=
     python-dateutil
-commands=python -m setup test
+commands=python -m unittest discover
 
 [testenv:py26]
 deps=
     ordereddict
     python-dateutil
+commands=python -m setup test
 
 
 [testenv:docs]
@@ -24,7 +25,7 @@ deps=
     coverage
 commands=
     coverage erase
-    coverage run -m setup test
+    coverage run -m unittest
     coverage html
     coverage report
 
@@ -34,7 +35,7 @@ deps=
     coverage
 commands=
     coverage erase
-    coverage run -m setup test -s clize.tests.test_util
+    coverage run -m unittest clize.tests.test_util
     coverage html
     coverage report --include 'clize/util.py'
 
@@ -45,7 +46,7 @@ deps=
     coverage
 commands=
     coverage erase
-    coverage run -m setup test -s clize.tests.test_testutil
+    coverage run -m unittest clize.tests.test_testutil
     coverage html
     coverage report --include 'clize/tests/util.py'
 
@@ -55,6 +56,6 @@ deps=
     coverage
 commands=
     coverage erase
-    coverage run -m setup test -s clize.tests.test_help
+    coverage run -m unittest clize.tests.test_help
     coverage html
     coverage report --include 'clize/help.py'
