--- a/tox.ini
+++ b/tox.ini
@@ -29,6 +29,16 @@ commands=
     coverage html
     coverage report
 
+[testenv:coveralls]
+basepython=python3.4
+deps=
+    python-dateutil
+    coverage
+    coveralls
+commands=
+    coverage run --source clize -m unittest
+    coveralls
+
 [testenv:cover-util]
 basepython=python3.4
 deps=
