Fixed coveralls not receiving travis build info env

--- a/tox.ini
+++ b/tox.ini
@@ -30,6 +30,7 @@ commands=
     coverage report
 
 [testenv:coveralls]
+passenv=TRAVIS TRAVIS_JOB_ID TRAVIS_BRANCH
 basepython=python3.4
 deps=
     python-dateutil
