Parametrized the tox commands

--- a/tox.ini
+++ b/tox.ini
@@ -4,13 +4,13 @@ envlist=py26,py27,py32,py33,py34
 [testenv]
 deps=
     python-dateutil
-commands=python -m unittest discover
+commands=python {posargs:-m unittest discover}
 
 [testenv:py26]
 deps=
     ordereddict
     python-dateutil
-commands=python -m setup test
+commands=python {posargs:-m setup test -q}
 
 
 [testenv:docs]
