Reorganize tox.ini. Added pyflakes target

--- a/tox.ini
+++ b/tox.ini
@@ -1,72 +1,41 @@
 [tox]
-envlist=py26,py27,py32,py33,py34
+envlist=test-{py26,py27,py33,py34,py35}
+skipsdist=true
+
+[tox:travis]
+3.5 = py35, coveralls, pyflakes
 
 [testenv]
 deps=
+    unittest2
     python-dateutil
-commands=python {posargs:-m unittest discover}
+    # --editable=../sigtools
+    sigtools>=1.1a2
+    py26: ordereddict
+    docs: sphinx
+    cover,coveralls: coverage
+    coveralls: coveralls
 
-[testenv:py26]
-deps=
-    ordereddict
-    python-dateutil
-commands=python {posargs:-m setup test -q}
-
-
-[testenv:docs]
-deps=sphinx
 commands=
-    python -m setup build_sphinx
-
-[testenv:cover]
-basepython=python3.4
-deps=
-    python-dateutil
-    coverage
-commands=
-    coverage erase
-    coverage run -m unittest
-    coverage html
-    coverage report
+    test: {posargs:{envbindir}/unit2}
+    cover: coverage erase
+    cover-all: coverage run {posargs:-m unittest2}
+    cover-util: coverage run -m unittest2 clize.tests.test_util
+    cover-help: coverage run -m unittest2 clize.tests.test_help
+    cover: coverage html
+    cover-all: coverage report
+    cover-util: coverage report --include 'clize/util.py'
+    cover-help: coverage report --include 'clize/help.py'
+    docs: python -m setup build_sphinx
 
 [testenv:coveralls]
 passenv=TRAVIS TRAVIS_JOB_ID TRAVIS_BRANCH
-basepython=python3.4
-deps=
-    python-dateutil
-    coverage
-    coveralls
 commands=
-    coverage run --source clize -m unittest
+    coverage run --source clize -m unittest2
     coveralls
 
-[testenv:cover-util]
-basepython=python3.4
+[testenv:pyflakes]
 deps=
-    coverage
+    pyflakes
 commands=
-    coverage erase
-    coverage run -m unittest clize.tests.test_util
-    coverage html
-    coverage report --include 'clize/util.py'
-
-
-[testenv:cover-tester]
-basepython=python3.4
-deps=
-    coverage
-commands=
-    coverage erase
-    coverage run -m unittest clize.tests.test_testutil
-    coverage html
-    coverage report --include 'clize/tests/util.py'
-
-[testenv:cover-help]
-basepython=python3.4
-deps=
-    coverage
-commands=
-    coverage erase
-    coverage run -m unittest clize.tests.test_help
-    coverage html
-    coverage report --include 'clize/help.py'
+    pyflakes clize
