Use pypi:repeated_test

--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,7 @@ skipsdist=true
 deps=
     unittest2
     python-dateutil
+    repeated_test
     # --editable=../sigtools
     sigtools>=1.1a2
     py26: ordereddict
