Build sphinx docs directly rather than through setuptools

--- a/tox.ini
+++ b/tox.ini
@@ -26,7 +26,7 @@ commands=
     cover-all: coverage report
     cover-util: coverage report --include 'clize/util.py'
     cover-help: coverage report --include 'clize/help.py'
-    docs: python -m setup build_sphinx
+    docs: {envbindir}/sphinx-build {toxinidir}/docs/ {toxinidir}/build/sphinx {posargs:}
 
 [testenv:coveralls]
 passenv=TRAVIS TRAVIS_JOB_ID TRAVIS_BRANCH
