--- a/tox.ini
+++ b/tox.ini
@@ -26,6 +26,7 @@ commands=
     cover-all: coverage report
     cover-util: coverage report --include 'clize/util.py'
     cover-help: coverage report --include 'clize/help.py'
+    docs: pip install -e .
     docs: {envbindir}/sphinx-build {toxinidir}/docs/ {toxinidir}/build/sphinx {posargs:}
 
 [testenv:coveralls]
