--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ deps=
     unittest2
     python-dateutil
     repeated_test
-    sigtools>=1.1a3
+    sigtools>=2.0b1
     py26: ordereddict
     docs: sphinx
     cover,coveralls: coverage
