docs: use the RTD theme locally

--- a/tox.ini
+++ b/tox.ini
@@ -13,6 +13,7 @@ deps=
     sigtools>=2.0b1
     py26: ordereddict
     docs: sphinx
+    docs: sphinx_rtd_theme
     cover,coveralls: coverage
     coveralls: coveralls
 
