--- a/tox.ini
+++ b/tox.ini
@@ -20,9 +20,9 @@ deps=
 commands=
     test: {posargs:{envbindir}/unit2}
     cover: coverage erase
-    cover-all: coverage run {posargs:-m unittest2}
-    cover-util: coverage run -m unittest2 clize.tests.test_util
-    cover-help: coverage run -m unittest2 clize.tests.test_help
+    cover-all: -coverage run {posargs:-m unittest2}
+    cover-util: -coverage run -m unittest2 clize.tests.test_util
+    cover-help: -coverage run -m unittest2 clize.tests.test_help
     cover: coverage html
     cover-all: coverage report
     cover-util: coverage report --include 'clize/util.py'
