--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist=test-{py26,py27,pypy,py33,py34,py35}
+envlist=test-{py27,pypy,py33,py34,py35}
 skipsdist=true
 
 [tox:travis]
@@ -11,7 +11,6 @@ deps=
     python-dateutil
     repeated_test
     sigtools>=2.0b1
-    py26: ordereddict
     docs: sphinx
     docs: sphinx_rtd_theme
     cover,coveralls: coverage
