help: separate the help CLI, rendering and docstring parser

--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,8 @@ pypy3 = test-pypy3
 deps=
     unittest2
     python-dateutil
+    attrs
+    od
     repeated_test
     sigtools>=2.0b1
     docs: sphinx
