help: add basic support for sphinx autodoc-style docstrings
At the moment, enable it like this:

    def sphinx_helper_class(*args, **kwargs):
        return clize.help.ClizeHelp(
            *args, **kwargs,
            builder=clize.help.HelpForSphinxDocstring.from_subject)

    clize.run(your_func, helper_class=sphinx_helper_class)

--- a/tox.ini
+++ b/tox.ini
@@ -13,6 +13,7 @@ usedevelop=True
 deps=
     unittest2
     python-dateutil
+    Pygments
     docs: sphinx
     docs: sphinx_rtd_theme
     cover,coveralls: coverage
