setup,tox: Use tox's usedevelop rather than repeating dependencies in tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -1,19 +1,16 @@
 [tox]
 envlist=test-{py27,pypy,py33,py34,py35}
-skipsdist=true
+skipsdist=True
 
 [tox:travis]
 3.5 = py35, coveralls, pyflakes
 pypy3 = test-pypy3
 
 [testenv]
+usedevelop=True
 deps=
     unittest2
     python-dateutil
-    attrs
-    od
-    repeated_test
-    sigtools>=2.0b1
     docs: sphinx
     docs: sphinx_rtd_theme
     cover,coveralls: coverage
