--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ python:
   - 3.3
   - 3.4
   - 3.5
+  - 3.6-dev
   - nightly
   - pypy3.3-5.2-alpha1
 install:
@@ -13,4 +14,4 @@ script:
   - tox
 matrix:
     allow_failures:
-        - python: pypy3-5.2-alpha1
+        - python: pypy3.3-5.2-alpha1
