--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,12 @@
 [tox]
-envlist=test-{py27,pypy,py33,py34,py35}
+envlist=test-{py27,pypy,py33,py34,py35,py36}
 skipsdist=True
 
 [tox:travis]
 3.5 = py35, coveralls, pyflakes
-pypy3 = test-pypy3
+3.6-dev = test-py36
+nightly = test-py37
+pypy3.3-5.2-alpha1 = test-pypy3
 
 [testenv]
 usedevelop=True
