--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,7 @@ pypy3.3-5.2-alpha1 = test-pypy3
 usedevelop=True
 deps=
     unittest2
+    repeated_test
     python-dateutil
     Pygments
     docs: sphinx
