--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,13 @@
 [tox]
-envlist=test-{py27,pypy,py33,py34,py35,py36}
+envlist=test-{py27,pypy,py33,py34,py35,py36,py37}
 skipsdist=True
 
 [tox:travis]
-3.6 = py36, coveralls, pyflakes
+3.7 = py37, coveralls, pyflakes
 3.7-dev = test-py37
-nightly = test-py37
-pypy3.3-5.2-alpha1 = test-pypy3
+3.8-dev = test-py38
+nightly = test-py38
+pypy3 = test-pypy3
 
 [testenv]
 usedevelop=True
