--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,8 @@
 [tox]
 envlist=test-{py27,pypy,py33,py34,py35,py36,py37}
 skipsdist=True
+requires=
+  virtualenv>=20
 
 [tox:travis]
 3.7 = py37, coveralls, pyflakes
@@ -33,6 +35,11 @@ commands=
     cover-util: coverage report --include 'clize/util.py'
     cover-help: coverage report --include 'clize/help.py'
     docs: {envbindir}/sphinx-build {toxinidir}/docs/ {toxinidir}/build/sphinx {posargs:}
+
+[testenv:test-pypy]
+download=true
+setenv=
+  VIRTUALENV_PIP=19
 
 [testenv:coveralls]
 passenv=TRAVIS TRAVIS_JOB_ID TRAVIS_BRANCH
