--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,8 @@ deps=
     Pygments
     docs: sphinx
     docs: sphinx_rtd_theme
-    cover,coveralls: coverage
+    cover: coverage
+    coveralls: coverage<5.0
     coveralls: coveralls
 
 commands=
@@ -40,7 +41,7 @@ setenv=
   VIRTUALENV_PIP=19
 
 [testenv:coveralls]
-passenv=TRAVIS TRAVIS_JOB_ID TRAVIS_BRANCH
+passenv=TRAVIS TRAVIS_*
 commands=
     coverage run --source clize -m unittest2
     coveralls
