travis: update python versions to include 3.9

--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,13 @@
 [tox]
-envlist=test-{py27,pypy,py33,py34,py35,py36,py37}
+envlist=test-{py27,pypy,py33,py34,py35,py36,py37,py38}
 skipsdist=True
 
 [tox:travis]
-3.7 = py37, coveralls, pyflakes
-3.7-dev = test-py37
+3.8 = py38, coveralls, pyflakes
 3.8-dev = test-py38
-nightly = test-py38
+3.9-dev = test-py39
 pypy3 = test-pypy3
+nightly = test-py39
 
 [testenv]
 usedevelop=True
