travis: add python 3.10

--- a/tox.ini
+++ b/tox.ini
@@ -6,8 +6,9 @@ skipsdist=True
 3.8 = py38, coveralls, pyflakes
 3.8-dev = test-py38
 3.9-dev = test-py39
+3.10-dev = test-py310
 pypy3 = test-pypy3
-nightly = test-py39
+nightly = test-py310
 
 [testenv]
 usedevelop=True
