--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist=test-{py27,pypy,py33,py34,py35,py36,py37,py38}
+envlist=test-{py27,pypy,py34,py35,pypy3,py36,py37,py38,py39,py310}, coveralls, pyflakes
 skipsdist=True
 
 [tox:travis]
@@ -9,6 +9,18 @@ skipsdist=True
 3.10-dev = test-py310
 pypy3 = test-pypy3
 nightly = test-py310
+
+[gh-actions]
+python =
+    2.7: py27
+    pypy2: pypy
+    3.5: py35
+    pypy3: pypy3
+    3.6: py36
+    3.7: py37
+    3.8: py38
+    3.9: py39, coveralls, pyflakes
+    3.10-dev: py310
 
 [testenv]
 usedevelop=True
