drop py<3.6, support 3.10

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist=test-{py27,pypy,py35,pypy3,py36,py37,py38,py39,py310}, py39-cover-all, pyflakes
+envlist=test-{pypy3,py36,py37,py38,py39,py310}
 skipsdist=True
 
 [tox:travis]
@@ -25,7 +25,6 @@ python =
 [testenv]
 usedevelop=True
 deps=
-    unittest2
     repeated_test
     pathlib2
     python-dateutil
@@ -36,9 +35,9 @@ deps=
     coveralls: coveralls~=3.2.0
 
 commands=
-    test: {posargs:{envbindir}/unit2}
+    test: {posargs:python -m unittest}
     cover: coverage erase
-    cover-all: -coverage run {posargs:-m unittest2}
+    cover-all: -coverage run {posargs:-m unittest}
     cover-util: -coverage run -m unittest2 clize.tests.test_util
     cover-help: -coverage run -m unittest2 clize.tests.test_help
     cover: coverage html
@@ -47,14 +46,13 @@ commands=
     cover-help: coverage report --include 'clize/help.py'
     docs: {envbindir}/sphinx-build {toxinidir}/docs/ {toxinidir}/build/sphinx {posargs:}
 
-
 [testenv:docs]
 basepython=python3.9
 
 [testenv:coveralls]
 passenv=TRAVIS TRAVIS_*
 commands=
-    coverage run --source clize -m unittest2
+    coverage run --source clize -m unittest
     coveralls
 
 [testenv:coveralls-gh-actions]
