--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -7,7 +7,7 @@ on:
   # Triggers the workflow on pull request events, or push events to master branch
   push:
     branches:
-      - main
+      - master
   pull_request:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
