pass on GitHub Actions vaariables for coveralls

--- a/tox.ini
+++ b/tox.ini
@@ -59,7 +59,7 @@ setenv=
   VIRTUALENV_PIP=19
 
 [testenv:coveralls]
-passenv=TRAVIS TRAVIS_*
+passenv=TRAVIS TRAVIS_* GITHUB_*
 commands=
     coverage run --source clize -m unittest2
     coveralls
