pass on GitHub Actions vaariables for coveralls

--- a/tox.ini
+++ b/tox.ini
@@ -49,7 +49,7 @@ commands=
     docs: {envbindir}/sphinx-build {toxinidir}/docs/ {toxinidir}/build/sphinx {posargs:}
 
 [testenv:coveralls]
-passenv=TRAVIS TRAVIS_*
+passenv=TRAVIS TRAVIS_* GITHUB_*
 commands=
     coverage run --source clize -m unittest2
     coveralls
