--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -8,6 +8,8 @@ on:
   push:
     branches:
       - master
+    tags:
+      - *
   pull_request:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
