--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -11,6 +11,9 @@ on:
     tags:
       - *
   pull_request:
+    types:
+      - 'opened'
+      - 'synchronize'
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
