--- a/.github/workflows/tox-test.yml
+++ b/.github/workflows/tox-test.yml
@@ -16,6 +16,8 @@ on:
       - 'synchronize'
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+  schedule:
+    - cron: '30 0 * * 6'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
