--- a/.github/workflows/tox-test.yml
+++ b/.github/workflows/tox-test.yml
@@ -25,8 +25,11 @@ jobs:
   tox-test:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    continue-on-error: ${{ matrix.experimental }}
     strategy:
       matrix:
+        experimental:
+          - false
         python-version:
           - '2.7'
           - 'pypy2'
@@ -37,6 +40,9 @@ jobs:
           - '3.8'
           - '3.9'
           - '3.10-dev'
+        include:
+          - python-version: '3.10-dev'
+            experimental: true
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
