--- a/.github/workflows/tox-test.yml
+++ b/.github/workflows/tox-test.yml
@@ -46,7 +46,7 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      # GitHub Actions checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
       - name: Setup python
         uses: actions/setup-python@v2
