--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist=test-{py27,pypy,py34,py35,pypy3,py36,py37,py38,py39,py310}, coveralls, pyflakes
+envlist=test-{py27,pypy,py34,py35,pypy3,py36,py37,py38,py39,py310}, pyflakes
 skipsdist=True
 
 [tox:travis]
@@ -19,7 +19,7 @@ python =
     3.6: py36
     3.7: py37
     3.8: py38
-    3.9: py39, coveralls, pyflakes
+    3.9: py39
     3.10-dev: py310
 
 [testenv]
@@ -49,7 +49,7 @@ commands=
     docs: {envbindir}/sphinx-build {toxinidir}/docs/ {toxinidir}/build/sphinx {posargs:}
 
 [testenv:coveralls]
-passenv=TRAVIS TRAVIS_* GITHUB_*
+passenv=TRAVIS TRAVIS_*
 commands=
     coverage run --source clize -m unittest2
     coveralls
