fix (hopefully) coveralls support with github actions

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist=test-{py27,pypy,py34,py35,pypy3,py36,py37,py38,py39,py310}, coveralls, pyflakes
+envlist=test-{py27,pypy,py33,py34,py35,py36}
 skipsdist=True
 requires=
   virtualenv>=20
@@ -20,7 +20,7 @@ python =
     3.6: py36
     3.7: py37
     3.8: py38
-    3.9: py39, coveralls, pyflakes
+    3.9: py39
     3.10-dev: py310
 
 [testenv]
@@ -55,7 +55,7 @@ setenv=
   VIRTUALENV_PIP=19
 
 [testenv:coveralls]
-passenv=TRAVIS TRAVIS_* GITHUB_*
+passenv=TRAVIS TRAVIS_*
 commands=
     coverage run --source clize -m unittest2
     coveralls
