--- a/tox.ini
+++ b/tox.ini
@@ -33,7 +33,7 @@ deps=
     docs: sphinx
     docs: sphinx_rtd_theme
     cover: coverage
-    coveralls: coverage<5.0
+    coveralls: coverage
     coveralls: coveralls
 
 commands=
@@ -52,6 +52,11 @@ commands=
 passenv=TRAVIS TRAVIS_*
 commands=
     coverage run --source clize -m unittest2
+    coveralls
+
+[testenv:coveralls-gh-actions]
+passenv=GITHUB_*
+commands=
     coveralls
 
 [testenv:pyflakes]
