--- a/tox.ini
+++ b/tox.ini
@@ -32,7 +32,7 @@ deps=
     docs: sphinx
     docs: sphinx_rtd_theme
     cover: coverage
-    coveralls: coverage
+    cover: coveralls
     coveralls: coveralls
 
 commands=
