install coveralls in coverage step, to weed out any known incompatibilities

--- a/tox.ini
+++ b/tox.ini
@@ -34,7 +34,7 @@ deps=
     docs: sphinx
     docs: sphinx_rtd_theme
     cover: coverage
-    coveralls: coverage
+    cover: coveralls
     coveralls: coveralls
 
 commands=
