try to resolve more coveralls issues

--- a/tox.ini
+++ b/tox.ini
@@ -57,7 +57,7 @@ commands=
 [testenv:coveralls-gh-actions]
 passenv=GITHUB_*
 commands=
-    coveralls
+    coveralls --service=github
 
 [testenv:pyflakes]
 deps=
