--- a/tox.ini
+++ b/tox.ini
@@ -61,7 +61,7 @@ commands=
 [testenv:coveralls-gh-actions]
 passenv=GITHUB_*
 commands=
-    coveralls
+    coveralls --service=github
 
 [testenv:pyflakes]
 deps=
