Allow attrs<22, update supported Python versions.
Python 3.10 will be supported when dropping Python 2.7

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist=test-{py27,pypy,py34,py35,pypy3,py36,py37,py38,py39,py310}, pyflakes
+envlist=test-{py27,pypy,py35,pypy3,py36,py37,py38,py39,py310}, py39-cover-all, pyflakes
 skipsdist=True
 
 [tox:travis]
