--- a/tox.ini
+++ b/tox.ini
@@ -30,7 +30,7 @@ deps=
     pathlib2
     python-dateutil
     Pygments
-    docs: sphinx
+    docs: sphinx<1.7
     docs: sphinx_rtd_theme
     cover: coverage
     cover: coveralls
