--- a/tox.ini
+++ b/tox.ini
@@ -30,7 +30,7 @@ deps=
     pathlib2
     python-dateutil
     Pygments
-    docs: sphinx
+    docs: sphinx~=4.2.0
     docs: sphinx_rtd_theme
     cover: coverage~=5.5
     cover: coveralls~=3.2.0
@@ -47,6 +47,10 @@ commands=
     cover-util: coverage report --include 'clize/util.py'
     cover-help: coverage report --include 'clize/help.py'
     docs: {envbindir}/sphinx-build {toxinidir}/docs/ {toxinidir}/build/sphinx {posargs:}
+
+
+[testenv:docs]
+basepython=python3.9
 
 [testenv:coveralls]
 passenv=TRAVIS TRAVIS_*
