--- a/tox.ini
+++ b/tox.ini
@@ -29,7 +29,7 @@ deps=
     repeated_test
     python-dateutil
     Pygments
-    docs: sphinx
+    docs: sphinx~=4.2.0
     docs: sphinx_rtd_theme
     cover: coverage~=5.5
     cover: coveralls~=3.2.0
@@ -51,6 +51,9 @@ commands=
 download=true
 setenv=
   VIRTUALENV_PIP=19
+
+[testenv:docs]
+basepython=python3.9
 
 [testenv:coveralls]
 passenv=TRAVIS TRAVIS_*
