Pin coverage/coveralls version

--- a/tox.ini
+++ b/tox.ini
@@ -31,9 +31,9 @@ deps=
     Pygments
     docs: sphinx
     docs: sphinx_rtd_theme
-    cover: coverage
-    cover: coveralls
-    coveralls: coveralls
+    cover: coverage~=5.5
+    cover: coveralls~=3.2.0
+    coveralls: coveralls~=3.2.0
 
 commands=
     test: {posargs:{envbindir}/unit2}
