update RTD config
- Use `.readthedocs.yaml`
- move docs requirements to extra_requires
- require pip 21 to avoid version incompatiblity between sphinx===4.2.0 <>
docutils===18.0

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,8 @@
 [tox]
 envlist=test-{py27,pypy,py35,pypy3,py36,py37,py38,py39,py310}, py39-cover-all, pyflakes
 skipsdist=True
+requires=
+  pip >= 21.3.1
 
 [tox:travis]
 3.8 = py38, coveralls, pyflakes
@@ -30,8 +32,7 @@ deps=
     pathlib2
     python-dateutil
     Pygments
-    docs: sphinx~=4.2.0
-    docs: sphinx_rtd_theme
+    docs: -e .[clize-own-docs]
     cover: coverage~=5.5
     cover: coveralls~=3.2.0
     coveralls: coveralls~=3.2.0
