update RTD config
- Use `.readthedocs.yaml`
- move docs requirements to extra_requires
- require pip 21 to avoid version incompatiblity between sphinx===4.2.0 <>
docutils===18.0

--- a/tox.ini
+++ b/tox.ini
@@ -31,8 +31,7 @@ deps=
     pathlib2
     python-dateutil
     Pygments
-    docs: sphinx~=4.2.0
-    docs: sphinx_rtd_theme
+    docs: -e .[clize-own-docs]
     cover: coverage~=5.5
     cover: coveralls~=3.2.0
     coveralls: coveralls~=3.2.0
@@ -56,6 +55,9 @@ setenv=
 
 [testenv:docs]
 basepython=python3.9
+download=true
+setenv=
+  VIRTUALENV_PIP=21.3.1
 
 [testenv:coveralls]
 passenv=TRAVIS TRAVIS_*
