--- a/tox.ini
+++ b/tox.ini
@@ -29,8 +29,7 @@ deps=
     repeated_test
     python-dateutil
     Pygments
-    docs: sphinx~=4.2.0
-    docs: sphinx_rtd_theme
+    docs: -e .[clize-own-docs]
     cover: coverage~=5.5
     cover: coveralls~=3.2.0
     coveralls: coveralls~=3.2.0
@@ -54,6 +53,9 @@ setenv=
 
 [testenv:docs]
 basepython=python3.9
+download=true
+setenv=
+  VIRTUALENV_PIP=21.3.1
 
 [testenv:coveralls]
 passenv=TRAVIS TRAVIS_*
