--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist=test-{py27,pypy,py33,py34,py35,py36}
+envlist=test-{py27,pypy,py33,py34,py35,py36,py37,py38,py39}
 skipsdist=True
 requires=
   virtualenv>=20
@@ -20,7 +20,6 @@ python =
     3.7: py37
     3.8: py38
     3.9: py39
-    3.10-dev: py310
 
 [testenv]
 usedevelop=True
