avoid sharing bytecode between python versions

--- a/tox.ini
+++ b/tox.ini
@@ -35,6 +35,9 @@ deps=
     cover: coveralls~=3.2.0
     coveralls: coveralls~=3.2.0
 
+setenv=
+    PYTHONDONTWRITEBYTECODE=1
+
 commands=
     test: {posargs:{envbindir}/unit2}
     cover: coverage erase
