fix pypy2 build

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,8 @@
 [tox]
 envlist=test-{py27,pypy,py35,pypy3,py36,py37,py38,py39,py310}, py39-cover-all, pyflakes
 skipsdist=True
+requires=
+  virtualenv>=20
 
 [tox:travis]
 3.8 = py38, coveralls, pyflakes
@@ -47,6 +49,10 @@ commands=
     cover-help: coverage report --include 'clize/help.py'
     docs: {envbindir}/sphinx-build {toxinidir}/docs/ {toxinidir}/build/sphinx {posargs:}
 
+[testenv:test-pypy]
+download=true
+setenv=
+  VIRTUALENV_PIP=19
 
 [testenv:docs]
 basepython=python3.9
