--- a/tox.ini
+++ b/tox.ini
@@ -2,33 +2,10 @@
 envlist=test-{pypy3,py36,py37,py38,py39,py310}
 skipsdist=True
 
-[tox:travis]
-3.8 = py38, coveralls, pyflakes
-3.8-dev = test-py38
-3.9-dev = test-py39
-3.10-dev = test-py310
-pypy3 = test-pypy3
-nightly = test-py310
-
-[gh-actions]
-python =
-    2.7: py27
-    pypy2: pypy
-    3.5: py35
-    pypy3: pypy3
-    3.6: py36
-    3.7: py37
-    3.8: py38
-    3.9: py39
-    3.10-dev: py310
-
 [testenv]
 usedevelop=True
 deps=
-    repeated_test
-    pathlib2
-    python-dateutil
-    Pygments
+    -e .[test]
     docs: -e .[clize-own-docs]
     cover: coverage~=5.5
     cover: coveralls~=3.2.0
@@ -48,17 +25,6 @@ commands=
 
 [testenv:docs]
 basepython=python3.9
-
-[testenv:coveralls]
-passenv=TRAVIS TRAVIS_*
-commands=
-    coverage run --source clize -m unittest
-    coveralls
-
-[testenv:coveralls-gh-actions]
-passenv=GITHUB_*
-commands=
-    coveralls --service=github
 
 [testenv:pyflakes]
 deps=
