--- a/tox.ini
+++ b/tox.ini
@@ -1,15 +1,12 @@
 [tox]
 envlist=test-{pypy3,py36,py37,py38,py39,py310}
-skipsdist=True
 
 [testenv]
-usedevelop=True
+skip_install=true
 deps=
     -e .[test]
     docs: -e .[clize-own-docs]
-    cover: coverage~=5.5
-    cover: coveralls~=3.2.0
-    coveralls: coveralls~=3.2.0
+    cover: coverage
 
 commands=
     test: {posargs:python -m unittest}
