drop Python 2 support, support Python 3.10 (#76)

--- a/tox.ini
+++ b/tox.ini
@@ -1,44 +1,17 @@
 [tox]
-envlist=test-{py27,pypy,py35,pypy3,py36,py37,py38,py39,py310}, py39-cover-all, pyflakes
-skipsdist=True
-
-[tox:travis]
-3.8 = py38, coveralls, pyflakes
-3.8-dev = test-py38
-3.9-dev = test-py39
-3.10-dev = test-py310
-pypy3 = test-pypy3
-nightly = test-py310
-
-[gh-actions]
-python =
-    2.7: py27
-    pypy2: pypy
-    3.5: py35
-    pypy3: pypy3
-    3.6: py36
-    3.7: py37
-    3.8: py38
-    3.9: py39
-    3.10-dev: py310
+envlist=test-{pypy3,py36,py37,py38,py39,py310}
 
 [testenv]
-usedevelop=True
+skip_install=true
 deps=
-    unittest2
-    repeated_test
-    pathlib2
-    python-dateutil
-    Pygments
+    -e .[test]
     docs: -e .[clize-own-docs]
-    cover: coverage~=5.5
-    cover: coveralls~=3.2.0
-    coveralls: coveralls~=3.2.0
+    cover: coverage
 
 commands=
-    test: {posargs:{envbindir}/unit2}
+    test: {posargs:python -m unittest}
     cover: coverage erase
-    cover-all: -coverage run {posargs:-m unittest2}
+    cover-all: -coverage run {posargs:-m unittest}
     cover-util: -coverage run -m unittest2 clize.tests.test_util
     cover-help: -coverage run -m unittest2 clize.tests.test_help
     cover: coverage html
@@ -47,20 +20,8 @@ commands=
     cover-help: coverage report --include 'clize/help.py'
     docs: {envbindir}/sphinx-build {toxinidir}/docs/ {toxinidir}/build/sphinx {posargs:}
 
-
 [testenv:docs]
 basepython=python3.9
-
-[testenv:coveralls]
-passenv=TRAVIS TRAVIS_*
-commands=
-    coverage run --source clize -m unittest2
-    coveralls
-
-[testenv:coveralls-gh-actions]
-passenv=GITHUB_*
-commands=
-    coveralls --service=github
 
 [testenv:pyflakes]
 deps=
