Compatibility with Docutils 0.21+

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist=test-{pypy3,py36,py37,py38,py39,py310}
+envlist=test-{py39,py310},cover-py310-all,pyflakes
 
 [testenv]
 skip_install=true
@@ -15,6 +15,7 @@ commands=
     cover-util: -coverage run -m unittest2 clize.tests.test_util
     cover-help: -coverage run -m unittest2 clize.tests.test_help
     cover: coverage html
+    cover: coverage xml
     cover-all: coverage report
     cover-util: coverage report --include 'clize/util.py'
     cover-help: coverage report --include 'clize/help.py'
