--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,3 +20,16 @@ jobs:
     uses: epsy/python-workflows/.github/workflows/python-ci.yaml@main
     with:
       package-folder: clize
+  mypy:
+    name: "Run mypy on typed example"
+    runs-on: 'ubuntu-latest'
+    steps:
+      - uses: epsy/python-workflows/install-tox@ykaiser/mypy-action
+        with:
+          python-version: ${{ inputs.util-python-version }}
+      - name: Run mypy with tox
+        uses: epsy/python-workflows/tox-ci@ykaiser/mypy-action
+        with:
+          tox-args: -e typecheck
+          python-test-args: -m examples.typed_cli
+          problem-matcher: mypy
