--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist=test-{py39,py310},cover-py310-all,pyflakes
+envlist=test-{py39,py310},cover-py310-all,pyflakes,typecheck-example
 
 [testenv]
 skip_install=true
@@ -7,6 +7,7 @@ deps=
     -e .[test]
     docs: -e .[clize-own-docs]
     cover: coverage
+    typecheck: mypy
 
 commands=
     test: {posargs:python -m unittest}
@@ -29,3 +30,8 @@ deps=
     pyflakes
 commands=
     pyflakes clize
+
+[testenv:typecheck-example]
+commands=
+    mypy --non-interactive --install-types examples/typed_cli.py
+    mypy examples/typed_cli.py
