--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist=test-{py39,py310},cover-py310-all,pyflakes,typecheck-example
+envlist=test-{py39,py310},cover-py310-all,pyflakes,typecheck-py310-example
 
 [testenv]
 skip_install=true
@@ -21,6 +21,7 @@ commands=
     cover-util: coverage report --include 'clize/util.py'
     cover-help: coverage report --include 'clize/help.py'
     docs: {envbindir}/sphinx-build {toxinidir}/docs/ {toxinidir}/build/sphinx {posargs:}
+    typecheck-example: python -m mypy --no-incremental -v examples/typed_cli.py
 
 [testenv:docs]
 basepython=python3.9
@@ -30,8 +31,3 @@ deps=
     pyflakes
 commands=
     pyflakes clize
-
-[testenv:typecheck-example]
-commands=
-    mypy --non-interactive --install-types examples/typed_cli.py
-    mypy examples/typed_cli.py
