--- a/tox.ini
+++ b/tox.ini
@@ -21,7 +21,7 @@ commands=
     cover-util: coverage report --include 'clize/util.py'
     cover-help: coverage report --include 'clize/help.py'
     docs: {envbindir}/sphinx-build {toxinidir}/docs/ {toxinidir}/build/sphinx {posargs:}
-    typecheck-example: python -m mypy --install-types --non-interactive --ignore-missing-imports -v examples/typed_cli.py
+    typecheck-example: python -m mypy --install-types --non-interactive --ignore-missing-imports examples/typed_cli.py
 
 [testenv:docs]
 basepython=python3.9
