--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,11 +24,11 @@ jobs:
     name: "Run mypy on typed example"
     runs-on: 'ubuntu-latest'
     steps:
-      - uses: epsy/python-workflows/install-tox@ykaiser/mypy-action
+      - uses: epsy/python-workflows/install-tox@main
         with:
           python-version: "3.10"
       - name: Run mypy with tox
-        uses: epsy/python-workflows/tox-ci@ykaiser/mypy-action
+        uses: epsy/python-workflows/tox-ci@main
         with:
           tox-args: -e typecheck
           python-test-args: examples/typed_cli.py
