--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist=test-{py39,py310},cover-py310-all,pyflakes
+envlist=test-{py39,py310},cover-py310-all,pyflakes,typecheck-py310-example
 
 [testenv]
 skip_install=true
@@ -7,6 +7,7 @@ deps=
     -e .[test]
     docs: -e .[clize-own-docs]
     cover: coverage
+    typecheck: mypy
 
 commands=
     test: {posargs:python -m unittest}
@@ -20,6 +21,7 @@ commands=
     cover-util: coverage report --include 'clize/util.py'
     cover-help: coverage report --include 'clize/help.py'
     docs: {envbindir}/sphinx-build {toxinidir}/docs/ {toxinidir}/build/sphinx {posargs:}
+    typecheck-example: python -m mypy --install-types --non-interactive --ignore-missing-imports examples/typed_cli.py
 
 [testenv:docs]
 basepython=python3.9
