--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           python-version: "3.10"
       - name: Test with tox
-        uses: epsy/python-workflows/tox-ci@main
+        uses: epsy/python-workflows/tox-ci@ykaiser/fix-escapes-for-windows
         with:
           tox-args: ""
           python-test-args: "-m unittest"
