[dnm] focus known-working part of tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
         uses: epsy/python-workflows/tox-ci@ykaiser/fix-escapes-for-windows
         with:
           tox-args: ""
-          python-test-args: "-m unittest"
+          python-test-args: "-m unittest clize.tests.test_parser"
       - name: Verify that tox 'test' env ran
         run: cat ./tox-proof-test
   mypy:
