--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,7 @@ jobs:
         uses: epsy/python-workflows/tox-ci@ykaiser/fix-escapes-for-windows
         with:
           tox-args: ""
+          python-test-args: "-m unittest"
       - name: Verify that tox 'test' env ran
         run: cat ./tox-proof-test
         shell: bash
