--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,22 @@ jobs:
     uses: epsy/python-workflows/.github/workflows/python-ci.yaml@main
     with:
       package-folder: clize
+  python-windows-ci:
+    name: "Run tests (Windows)"
+    runs-on: 'windows-latest'
+    continue-on-error: true
+    steps:
+      - uses: epsy/python-workflows/install-tox@main
+        with:
+          python-version: "3.10"
+      - name: Test with tox
+        uses: epsy/python-workflows/tox-ci@main
+        with:
+          tox-args: ""
+          python-test-args: "-m unittest"
+      - name: Verify that tox 'test' env ran
+        run: cat ./tox-proof-test
+        shell: bash
   mypy:
     name: "Run mypy on typed example"
     runs-on: 'ubuntu-latest'
