--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ on:
 
 jobs:
   python-ci:
-    uses: epsy/python-workflows/.github/workflows/python-ci.yaml@main
+    uses: epsy/python-workflows/.github/workflows/python-ci.yaml@ykaiser/python3.6
     with:
       package-folder: clize
   python-windows-ci:
