--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,3 +3,7 @@ requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools_scm]
+
+[[tool.mypy.overrides]]
+module = "clize.*"
+ignore_errors = true
